Implemented Gradle build